[project]
name = "pep734-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexeev Bronislav",email = "alexeev.dev@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "interpreters-pep-734 (>=0.5.0,<0.6.0)",
    "pyperf (>=2.9.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
